Fixing CKEditor z-index issues - widgets and customizer.

--- a/Sites-Theme-Kigo-Discovery/kd-common/css/admin.css
+++ b/Sites-Theme-Kigo-Discovery/kd-common/css/admin.css
@@ -9,9 +9,11 @@ i {
 /* Colors */
 /* Customizer styles */
 /* CKEditor z-index fix */
-.cke_dialog_background_cover, .cke_reset_all[role="dialog"], .cke_panel {
-  z-index: 600000 !important;
-  position: fixed !important; }
+.cke_dialog_background_cover {
+  z-index: 600000 !important; }
+
+.cke_reset_all[role="dialog"], .cke_dialog, .cke_panel {
+  z-index: 600001 !important; }
 
 #customize-theme-controls > ul > li[id*="kd_"] > h3.accordion-section-title {
   background-color: rgba(51, 186, 175, 0.5); }
